@startuml Soarca Fin

interface IHandler {
 Message parse_on_message()
}

interface IDispatcher {
 void start_dispatcher()
 void queue_message(msg: Message)
}

interface IMQTTClient {
 void on_connect()
 void on_message()
}

interface ISoarcaFin {
 void set_config_MQTTServer()
 void set_fin_capabilities()
 void start_fin()
}

class SoarcaFin
class MQTTClient
class Handler
class Dispatcher
class DispatcherTask
class ThreadPoolExecutor
class Queue

IHandler <|.. Handler
IDispatcher <|.. Dispatcher
IMQTTClient <|.. MQTTClient
ISoarcaFin <|.. SoarcaFin

IMQTTClient <- SoarcaFin
IDispatcher <- MQTTClient
IHandler <- MQTTClient
DispatcherTask <- Dispatcher
ThreadPoolExecutor <- Dispatcher
Queue <- Dispatcher

@enduml